fix rating nav container on mobile

--- a/css/rating.css
+++ b/css/rating.css
@@ -100,6 +100,9 @@
 
     .rating-nav-container{
         flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .rating-nav{
